[package]
name = "rust-server-error"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
derive_more = { version = "2.0", features = ["display", "error", "from"] }

axum = { version = "0.8", optional = true }

httparse = { version = "1.10", optional = true }
http = { version = "1.3", optional = true }
h2 = { version = "0.4", optional = true }
sqlx = { version = "0.8", optional = true }
redis = { version = "0.32", optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.47", features = ["full"], optional = true }

[features]
default = ["full"]

full = [
	"axum_ext",
	"sqlx_error",
	"redis_error",
	"file_error",
	"tokio_error",
	"http_error",
	"http2_error",
	"service_error",
]

axum_ext = ["dep:axum"]

sqlx_error = ["dep:sqlx"]
file_error = []
service_error = ["dep:serde_json"]
redis_error = ["dep:redis"]
tokio_error = ["dep:tokio"]
http_error = ["dep:http", "dep:httparse"]
http2_error = ["dep:h2", "http_error"]
