[package]
name = "as-error"
version = "0.2.1"
edition = "2024"

[dependencies]
thiserror = "2.0"
derive_more = { version = "2.0", features = ["display", "error", "from"] }

actix-web = { version = "4" }
awc = { version = "3.8.1", optional = true }

sqlx = { version = "0.8", optional = true }
redis = { version = "0.32", optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.47", features = ["full"], optional = true }
chrono = { version = "0.4", optional = true }
rust_decimal = { version = "1.39", optional = true }


[features]
default = ["full"]
# default = ["sqlx_error", "tokio_error", "service_error",]

full = [
	"sqlx_error",
	"redis_error",
	"file_error",
	"tokio_error",
	"service_error",
	"awc_error",
	"chrono_error",
	"rust_decimal_error",
	"flatbuffer_error",
	"http_response_error",
	"string_error",
	"serde_error"
]

sqlx_error = ["dep:sqlx"]
file_error = []
service_error = ["dep:serde_json"]
redis_error = ["dep:redis"]
tokio_error = ["dep:tokio"]
awc_error = ["dep:awc"]
chrono_error = ["dep:chrono"]
rust_decimal_error = ["dep:rust_decimal"]
flatbuffer_error = []
http_response_error = []
string_error = []
serde_error = []

[dev-dependencies]
serde = "1.0"
